kubernetes-gcp/flask-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask
  labels:
    service: flask
spec:
  type: NodePort
  selector:
    app: flask
  ports: 
  - port: 5000
    targetPort: 5000
