kubernetes-gcp/minikube-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gke-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m

spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: react
          servicePort: 3000
      - path: /upload
        backend:
          serviceName: flask
          servicePort: 5000
      - path: /infer
        backend:
          serviceName: flask
          servicePort: 5000
      - path: /recognise 
        backend:
          serviceName: flask
          servicePort: 5000
      - path: /annotate
        backend:
          serviceName: flask
          servicePort: 5000
      - path: /get_audio
        backend:
          serviceName: flask
          servicePort: 5000
      - path: /get_audio_clips
        backend:
          serviceName: flask
          servicePort: 5000
      - path: /train
        backend:
          serviceName: flask
          servicePort: 5000
